// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: creator 1`] = `
<tr>
  <td
    className="nowrap text-middle"
  >
    <div>
      <strong>
        johndoe
      </strong>
    </div>
    <div
      className="little-spacer-top"
      style={
        {
          "whiteSpace": "normal",
        }
      }
    >
      permission_templates.project_creators.explanation
    </div>
  </td>
  <PermissionCell
    key="admin"
    loading={[]}
    onCheck={[Function]}
    permission={
      {
        "category": "admin",
        "permissions": [
          {
            "description": "",
            "key": "foo",
            "name": "Foo",
          },
          {
            "description": "",
            "key": "bar",
            "name": "Bar",
          },
        ],
      }
    }
    permissionItem={
      {
        "active": true,
        "local": true,
        "login": "<creator>",
        "name": "johndoe",
        "permissions": [
          "provisioning",
        ],
      }
    }
    selectedPermission="bar"
  />
  <PermissionCell
    key="baz"
    loading={[]}
    onCheck={[Function]}
    permission={
      {
        "description": "",
        "key": "baz",
        "name": "Baz",
      }
    }
    permissionItem={
      {
        "active": true,
        "local": true,
        "login": "<creator>",
        "name": "johndoe",
        "permissions": [
          "provisioning",
        ],
      }
    }
    selectedPermission="bar"
  />
</tr>
`;

exports[`should render correctly: default 1`] = `
<tr>
  <td
    className="nowrap text-middle"
  >
    <div
      className="display-flex-center"
    >
      <withAppStateContext(Avatar)
        className="text-middle big-spacer-right flex-0"
        name="John Doe"
        size={36}
      />
      <div
        className="max-width-100"
      >
        <div
          className="max-width-100 text-ellipsis"
        >
          <strong>
            John Doe
          </strong>
          <span
            className="note spacer-left"
          >
            john.doe
          </span>
        </div>
        <div
          className="little-spacer-top max-width-100 text-ellipsis"
        >
          john.doe@sonarsource.com
        </div>
      </div>
    </div>
  </td>
  <PermissionCell
    key="admin"
    loading={[]}
    onCheck={[Function]}
    permission={
      {
        "category": "admin",
        "permissions": [
          {
            "description": "",
            "key": "foo",
            "name": "Foo",
          },
          {
            "description": "",
            "key": "bar",
            "name": "Bar",
          },
        ],
      }
    }
    permissionItem={
      {
        "active": true,
        "email": "john.doe@sonarsource.com",
        "local": true,
        "login": "john.doe",
        "name": "John Doe",
        "permissions": [
          "provisioning",
        ],
      }
    }
    selectedPermission="bar"
  />
  <PermissionCell
    key="baz"
    loading={[]}
    onCheck={[Function]}
    permission={
      {
        "description": "",
        "key": "baz",
        "name": "Baz",
      }
    }
    permissionItem={
      {
        "active": true,
        "email": "john.doe@sonarsource.com",
        "local": true,
        "login": "john.doe",
        "name": "John Doe",
        "permissions": [
          "provisioning",
        ],
      }
    }
    selectedPermission="bar"
  />
</tr>
`;
